; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/amd/fsinfo/extr_fsinfo.c_find_username.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/amd/fsinfo/extr_fsinfo.c_find_username.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.passwd = type { i8* }

@.str = private unnamed_addr constant [5 x i8] c"USER\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"LOGNAME\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"root\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @find_username to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @find_username() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca %struct.passwd*, align 8
  %3 = call i8* (...) @getlogin()
  store i8* %3, i8** %1, align 8
  %4 = load i8*, i8** %1, align 8
  %5 = icmp ne i8* %4, null
  br i1 %5, label %16, label %6

6:                                                ; preds = %0
  %7 = call i32 (...) @getuid()
  %8 = call %struct.passwd* @getpwuid(i32 %7)
  store %struct.passwd* %8, %struct.passwd** %2, align 8
  %9 = load %struct.passwd*, %struct.passwd** %2, align 8
  %10 = icmp ne %struct.passwd* %9, null
  br i1 %10, label %11, label %15

11:                                               ; preds = %6
  %12 = load %struct.passwd*, %struct.passwd** %2, align 8
  %13 = getelementptr inbounds %struct.passwd, %struct.passwd* %12, i32 0, i32 0
  %14 = load i8*, i8** %13, align 8
  store i8* %14, i8** %1, align 8
  br label %15

15:                                               ; preds = %11, %6
  br label %16

16:                                               ; preds = %15, %0
  %17 = load i8*, i8** %1, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %21, label %19

19:                                               ; preds = %16
  %20 = call i8* @getenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  store i8* %20, i8** %1, align 8
  br label %21

21:                                               ; preds = %19, %16
  %22 = load i8*, i8** %1, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %26, label %24

24:                                               ; preds = %21
  %25 = call i8* @getenv(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  store i8* %25, i8** %1, align 8
  br label %26

26:                                               ; preds = %24, %21
  %27 = load i8*, i8** %1, align 8
  %28 = icmp ne i8* %27, null
  br i1 %28, label %30, label %29

29:                                               ; preds = %26
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %1, align 8
  br label %30

30:                                               ; preds = %29, %26
  %31 = load i8*, i8** %1, align 8
  %32 = call i8* @xstrdup(i8* %31)
  ret i8* %32
}

declare dso_local i8* @getlogin(...) #1

declare dso_local %struct.passwd* @getpwuid(i32) #1

declare dso_local i32 @getuid(...) #1

declare dso_local i8* @getenv(i8*) #1

declare dso_local i8* @xstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
